feat: 使用独立提示窗口替代系统提示框

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -5,7 +5,8 @@
   "description": "一款专为提升注意力和生产力而设计的番茄钟浏览器插件",
   "permissions": [
     "storage",
-    "notifications"
+    "notifications",
+    "windows"
   ],
   "action": {
     "default_popup": "popup.html",
